deployments/kubernetes/frontend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: gallifrey
spec:
  rules:
  - host: gallifrey.local
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: 80
